infra/k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
  namespace: nvg-cdp
spec:
  replicas: 3
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: us.icr.io/naveggcdp/cdp-server
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: server-ssh-secret
              mountPath: /app/secret
              readOnly: true
          resources:
            requests:
              cpu: "600m"
              memory: "600Mi"
            limits:
              cpu: "650m"
              memory: "650Mi"
      volumes:
        - name: server-ssh-secret
          secret:
            secretName: mongodb-cacert-pem
