infra/k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  namespace: nvg-cdp
spec:
  replicas: 2
  selector:
    matchLabels:
      component: auth
  template:
    metadata:
      labels:
        component: auth
    spec:
      containers:
        - name: auth
          image: pedro357bm/cdp-auth
          ports:
            - containerPort: 9000
---
apiVersion: v1
kind: Service
metadata:
  name: auth-cluster-ip-service
  namespace: nvg-cdp
spec:
  type: ClusterIP
  selector:
    component: auth
  ports:
    - port: 9000
      targetPort: 9000
