infra/k8s/auth-external-name-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-external-name-service
  namespace: nvg-cdp-ingress
spec:
  type: ExternalName
  externalName: auth-cluster-ip-service.nvg-cdp
  ports:
  - port: 9000
