infra/k8s/postgres-vol-claim.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
  namespace: nvg-cdp
spec:
  type: ClusterIP
  selector:
    component: postgres
  ports:
    - port: 5432
      targetPort: 5432
