infra/k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
  namespace: nvg-cdp
spec:
  type: ClusterIP
  selector:
    component: redis
  ports:
    - name: navegg-redis
      port: 6379
      targetPort: 6379
