infra/k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
  namespace: nvg-cdp
spec:
  type: ClusterIP
  selector:
    component: server
  ports:
    - port: 8000
      targetPort: 8000
